tests/functional/lang/eval-fail/dynamic-attrs-inherit-2.err.exp
error: dynamic attributes not allowed in inherit
       at /pwd/lang/eval-fail/dynamic-attrs-inherit-2.nix:5:15:
            4| {
            5|   inherit (a) ${"b" + ""};
             |               ^
            6| }
